# cicd-python-demo

./: Dockerfile  Jenkinsfile  makefile  pyproject.toml
app/: main.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
tests/: test_main.py
