[project]
name = "ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.2.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]